syntax = "proto3";

option csharp_namespace = "UserGRPC"; 

import "userInformation.proto";
package UserServiceProto;

service User_Service {
    rpc GetUsers (Empty) returns (UsersResponse);
    rpc GetUser (UserRequest) returns (UserResponse);
    rpc CreateUser (UserCreateRequest) returns (UserResponse);
    rpc EditUser (UserEditRequest) returns (UserResponse);
    rpc DeleteUser (UserRequest) returns (Empty);
}

message Empty{

}

message UserRequest {
    string id = 1;
}

message UserCreateRequest {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
}

message UserEditRequest {
    string id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
}

message UsersResponse {
    repeated UserModel users = 1;
}

message UserResponse {
    UserModel user =1;
}

message UserModel {
    string id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
    UserInformation userinfo = 5;
}